--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "smart-campus-backend",
   "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-  "start": "node server.js",
-  "dev": "nodemon server.js"
+  "main": "src/server.js",
+"scripts": {
+  "start": "node src/server.js",
+  "dev": "nodemon src/server.js"
 },
+
 
   "keywords": [],
   "author": "",
